--- a/packages/terra-form-select/src/_Frame.module.scss
+++ b/packages/terra-form-select/src/_Frame.module.scss
@@ -127,7 +127,10 @@
     list-style-type: none;
     margin: 0;
     overflow: hidden;
-    padding: 0;
+    padding-bottom: var(--terra-select-tags-padding-bottom, 0.21428571428571427rem);
+    padding-left: var(--terra-select-tags-padding-left, 0);
+    padding-right: var(--terra-select-tags-padding-right, 0);
+    padding-top: var(--terra-select-tags-padding-top, 0);
   }
 
   // A reduced, non-zero, height and width allows the input to receive focus using tab.
@@ -153,7 +156,7 @@
     color: inherit;
     flex: 1 1 auto;
     font-size: var(--terra-select-search-font-size, 1.143rem);
-    height: 1.375em;
+    height: var(--terra-select-search-height, 1.375em);
     margin-top: var(--terra-select-search-margin-top, 0.21428571428571427rem);
     max-width: 100%; // IE 10
     min-width: 0; // IE 11
@@ -180,6 +183,10 @@
     white-space: nowrap;
   }
 
+  .display > .search-input {
+    margin-bottom: var(--terra-select-display-search-margin-bottom, 0.21428571428571427rem);
+  }
+
   .tag,
   .search,
   .combobox,
@@ -192,7 +199,7 @@
       cursor: text;
       display: flex;
       flex: 1 1 auto; // IE 10
-      padding-bottom: var(--terra-select-padding-bottom, 0.21428571428571427rem);
+      padding-bottom: var(--terra-select-padding-bottom, 0);
       padding-left: var(--terra-select-padding-left, 0.42857rem);
       padding-right: var(--terra-select-padding-right, 0);
       padding-top: var(--terra-select-padding-top, 0);
