--- a/packages/terra-form-select/src/_Tag.module.scss
+++ b/packages/terra-form-select/src/_Tag.module.scss
@@ -16,6 +16,9 @@
 
   .display {
     border-bottom: var(--terra-select-tag-display-border-bottom, 0.14286rem solid #dedfe0);
+    border-left: var(--terra-select-tag-display-border-left, none);
+    border-right: var(--terra-select-tag-display-border-right, none);
+    border-top: var(--terra-select-tag-display-border-top, none);
     color: var(--terra-select-tag-display-color, #1c1f21);
     display: inline-block;  // IE 10
     flex: 1 1 auto; // IE 10
@@ -29,6 +32,9 @@
     align-items: center;
     background: var(--terra-select-tag-deselect-background, #e0e0e0);
     border-bottom: var(--terra-select-tag-deselect-border-bottom, 0.14286rem solid #aeaeaf);
+    border-left: var(--terra-select-tag-deselect-border-left, none);
+    border-right: var(--terra-select-tag-deselect-border-right, none);
+    border-top: var(--terra-select-tag-deselect-border-top, none);
     cursor: pointer;
     display: flex;
     flex-shrink: 0; // IE 10
@@ -37,7 +43,10 @@
 
     &:hover {
       background: var(--terra-select-tag-deselect-hover-background, #b9bbbc);
-      border-bottom: var(--terra-select-tag-deselect-hover-border-bottom-hover, 0.14286rem solid #8f8f90);
+      border-bottom: var(--terra-select-tag-deselect-hover-border-bottom, 0.14286rem solid #8f8f90);
+      border-left: var(--terra-select-tag-deselect-hover-border-left, none);
+      border-right: var(--terra-select-tag-deselect-hover-border-right, none);
+      border-top: var(--terra-select-tag-deselect-hover-border-top, none);
     }
   }
 
