--- a/packages/terra-form-select/src/_Frame.module.scss
+++ b/packages/terra-form-select/src/_Frame.module.scss
@@ -120,14 +120,18 @@
     padding: var(--terra-select-toggle-padding, 0 0.42857rem);
   }
 
-  .tags {
+  .content {
     display: flex;
     flex: 1 1 auto;
     flex-wrap: wrap; // IE 10
     list-style-type: none;
     margin: 0;
     overflow: hidden;
-    padding: 0;
+    padding-bottom: var(--terra-select-content-padding-bottom, 0.21428571428571427rem);
+    padding-left: var(--terra-select-content-padding-left, 0);
+    padding-right: var(--terra-select-content-padding-right, 0);
+    padding-top: var(--terra-select-content-padding-top, 0);
+
   }
 
   // A reduced, non-zero, height and width allows the input to receive focus using tab.
@@ -192,7 +196,7 @@
       cursor: text;
       display: flex;
       flex: 1 1 auto; // IE 10
-      padding-bottom: var(--terra-select-padding-bottom, 0.21428571428571427rem);
+      padding-bottom: var(--terra-select-padding-bottom, 0);
       padding-left: var(--terra-select-padding-left, 0.42857rem);
       padding-right: var(--terra-select-padding-right, 0);
       padding-top: var(--terra-select-padding-top, 0);
