--- a/packages/terra-form-input/src/Input.module.scss
+++ b/packages/terra-form-input/src/Input.module.scss
@@ -23,6 +23,7 @@
     width: 100%;
 
     &:hover {
+      background-color: var(--terra-form-input-hover-background-color, #fff);
       border: var(--terra-form-input-hover-border, 1px solid #dedfe0);
     }
 
@@ -52,13 +53,20 @@
         box-shadow: var(--terra-form-input-focus-keyboard-box-shadow-rtl);
       }
     }
+
+    &::placeholder {
+      color: var(--terra-form-input-placeholder-color);
+      font-style: var(--terra-form-input-placeholder-font-style);
+    }
   }
 
   .form-error {
+    background-color: var(--terra-form-input-error-background-color, #fff);
     background-image: var(--terra-form-input-error-focus-animation-background);
     border: var(--terra-form-input-error-border, 1px solid #dedfe0);
 
     &:hover {
+      background-color: var(--terra-form-input-error-hover-background-color, #fff);
       border: var(--terra-form-input-error-hover-border, 1px solid #dedfe0);
     }
 
